service-platform-operations/autogen-config/kube-yamls/play/app-deployment-local.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: 
  namespace: play
spec:
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: -app
    spec:
      containers:
        - name: 
          image: host.docker.internal:5000//:
          ports:
          - containerPort: 8080
