service-platform-operations/autogen-config/kube-yamls/play/app-service-local.yml
apiVersion: v1
kind: Service
metadata:
  name: 
  namespace: play
spec:
  selector:
    app: -app
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
