service-platform-operations/autogen-config/kube-yamls/play/app-ingress-local.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: -domain
  namespace: play
spec:
  rules:
  - host: .play.local.service.platform
    http:
      paths:
      - backend:
          serviceName: 
          servicePort: 8080
        path: /
